<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/main_menu_title"
        android:contentDescription="@string/main_menu_text_tile"
        android:id="@+id/title_imageView"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_imageView"
        android:src="@drawable/ghost"
        android:contentDescription="@string/main_menu_text_image"
        android:id="@+id/ghost_imageView"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/containing_linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp">

        <TextView
            android:text="@string/main_menu_text_start_a_game"
            android:drawableStart="@drawable/play_icon"
            android:drawableLeft="@drawable/play_icon"
            android:id="@+id/start_a_game_textView"
            style="@style/TextViewOptionMainMenu"/>

        <TextView
            android:text="@string/main_menu_text_highscores"
            android:drawableStart="@drawable/trophy_icon"
            android:drawableLeft="@drawable/trophy_icon"
            android:id="@+id/highscores_textView"
            style="@style/TextViewOptionMainMenu"/>

        <TextView
            android:text="@string/main_menu_text_how_to_play"
            android:drawableStart="@drawable/info_icon"
            android:drawableLeft="@drawable/info_icon"
            android:onClick="onHowToPlayClick"
            android:id="@+id/how_to_play_textView"
            style="@style/TextViewOptionMainMenu"/>

        <TextView
            android:text="@string/main_menu_text_settings"
            android:drawableStart="@drawable/settings_icon"
            android:drawableLeft="@drawable/settings_icon"
            android:id="@+id/settings_textView"
            style="@style/TextViewOptionMainMenu"/>

    </LinearLayout>

</RelativeLayout>
