<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.vincent.ghost.Settings">

    <ImageView
        android:src="@drawable/settings_title"
        android:contentDescription="@string/settings_text_title"
        style="@style/ImageViewScreenTitleLinear"/>

    <TextView
        android:textSize="17sp"
        android:text="@string/settings_text_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/language_radioGroup">

        <RadioButton
            android:text="@string/settings_text_radio_dutch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dutch_radioButton"/>

        <RadioButton
            android:text="@string/settings_text_radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/english_radioButton"/>

    </RadioGroup>

</LinearLayout>
